FLY wire David/force-app/main/default/objects/Opportunity/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <description>Show Account Industry from Account Record, used for List views and other segmentation.</description>
    <formula>TEXT( Account.Account_Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Show Account Industry from Account Record</inlineHelpText>
    <label>Account Industry</label>
    <type>Text</type>
</CustomField>