FLY wire David/force-app/main/default/objects/Opportunity/fields/Account_Industry_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry_Copy__c</fullName>
    <description>Capture Account Industry to trigger Revenue Calculation for Travel ARR. Populated by Process Builder automation: [Account] Trigger Changes from Account field change.</description>
    <inlineHelpText>Auto Populated by automation, captures Account Industry form Account record and triggers recalculation on Opportunity Products when changed.</inlineHelpText>
    <label>Account Industry Copy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>