FLY wire David/force-app/main/default/objects/Opportunity/fields/Account_Ownership_Type_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Ownership_Type_Copy__c</fullName>
    <description>Use Workflow to copy Account Ownership Type any time it is changed so that it triggers a recalculation of XB price.</description>
    <inlineHelpText>Use Workflow to copy Account Ownership Type any time it is changed so that it triggers a recalculation of XB price.</inlineHelpText>
    <label>Account Ownership Type Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>