FLY wire David/force-app/main/default/objects/Opportunity/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <description>Created for BOPI-352</description>
    <formula>Account.Account_Region__c</formula>
    <inlineHelpText>Used to pull the value from the Account Region field on Account in order to be used in Opp Approval rules</inlineHelpText>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>