FLY wire David/force-app/main/default/objects/Opportunity/fields/Account_Sub_Industry_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Industry_Copy__c</fullName>
    <description>Use Workflow to copy Account Sub Industry any time it is changed so that it triggers a recalculation of XB price.</description>
    <inlineHelpText>Use Workflow to copy Account Sub Industry any time it is changed so that it triggers a recalculation of XB price.</inlineHelpText>
    <label>Account Sub Industry Copy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>