FLY wire David/force-app/main/default/objects/Opportunity/fields/Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Amount__c</fullName>
    <label>Adjusted Amount</label>
    <summarizedField>OpportunityLineItem.Adjusted_Total_Text__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>