FLY wire David/force-app/main/default/objects/Opportunity/fields/Admin_Notes__c.field-meta.xml
<CustomField>
    <fullName>Admin_Notes__c</fullName>
    <description>Text field created to make notes about the Opportunity for Admin purposes. Currently for the Opps not Live after 3 months project.</description>
    <inlineHelpText>Text field created to make notes about the Opportunity for Admin purposes.</inlineHelpText>
    <label>Admin Notes</label>
    <type>TextArea</type>
</CustomField>