FLY wire David/force-app/main/default/objects/Opportunity/fields/Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>Amount_Won__c</fullName>
    <description>Returns Amount of Won Value. Used  For Win Rate Report</description>
    <formula>IF(
IsWon=TRUE,
Amount,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns Amount of Won Value. Used  For Win Rate Report</inlineHelpText>
    <label>Amount Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>