FLY wire David/force-app/main/default/objects/Opportunity/fields/Annual_DOM_CC_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_DOM_CC_Volume__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3160</description>
    <inlineHelpText>Enter the estimated annual domestic credit card volume in # (number of transactions) if applicable.</inlineHelpText>
    <label>Annual DOM CC Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>