FLY wire David/force-app/main/default/objects/Opportunity/fields/Annual_Expected_Self_Pay_USD__c.field-meta.xml
<CustomField>
    <fullName>Annual_Expected_Self_Pay_USD__c</fullName>
    <description>BOPI-30 Used in ARR calculations for HC</description>
    <inlineHelpText>Enter the annual self-pay payments expected through Flywire in USD</inlineHelpText>
    <label>Annual Expected Self-Pay USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>