FLY wire David/force-app/main/default/objects/Opportunity/fields/Annual_Intl_Bank_Transfer_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Intl_Bank_Transfer_Volume__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3162</description>
    <inlineHelpText>Enter the estimated annual international Bank Transfer volume in # (number of transactions) if applicable.</inlineHelpText>
    <label>Annual Intl Bank Transfer Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>