FLY wire David/force-app/main/default/objects/Opportunity/fields/Annual_Plan_Origination_USD__c.field-meta.xml
<CustomField>
    <fullName>Annual_Plan_Origination_USD__c</fullName>
    <description>BOPI-30 Used for HC ARR calculations</description>
    <inlineHelpText>Enter the estimated annual plan origination value in USD for ARR calculation</inlineHelpText>
    <label>Annual Plan Origination USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>