FLY wire David/force-app/main/default/objects/Opportunity/fields/Annual_Print_Statement_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Print_Statement_Volume__c</fullName>
    <description>BOPI-727 Used in HC ARR calculations for Paper Statements and Event-Based Paper Suppression</description>
    <inlineHelpText>Used in HC ARR calculations for Paper Statements and Event-Based Paper Suppression</inlineHelpText>
    <label>Annual Print Statement Volume</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>