FLY wire David/force-app/main/default/objects/Opportunity/fields/Approval_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Date__c</fullName>
    <description>BOPI-669 The Approval Status Date indicates the timestamp when the current approval status was last updated. This reflects the most recent change in the approval process. This field is used to trigger the &apos;Opportunity After Record Triggered Flow&apos;</description>
    <label>Approval Status Date</label>
    <type>DateTime</type>
</CustomField>