FLY wire David/force-app/main/default/objects/Opportunity/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>If Opp ARR is 0 it captures the Amount</description>
    <formula>IF(Opp_ARR__c = 0,Amount,Opp_ARR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total ARR for the Opportunity</inlineHelpText>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>