FLY wire David/force-app/main/default/objects/Opportunity/fields/Average_PYMNT_size__c.field-meta.xml
<CustomField>
    <fullName>Average_PYMNT_size__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3163</description>
    <inlineHelpText>Enter the estimated average PYMNT size across all PYMNT types.</inlineHelpText>
    <label>Average PYMNT size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>