FLY wire David/force-app/main/default/objects/Opportunity/fields/Avg_Trans_Amt__c.field-meta.xml
<CustomField>
    <fullName>Avg_Trans_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Average transaction amount (in client currency) for cross border FX payments. Used to auto calculate Payables price SAL-2265.
Modified label and Help to be used for different currencies in flow calculation 02-23-2024 SAL-3624</description>
    <inlineHelpText>The Average transaction amount in Clients Home Currency for FX Cross Border Payments.</inlineHelpText>
    <label>Avg FX Trans Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>