FLY wire David/force-app/main/default/objects/Opportunity/fields/Avg_Tuition_per_Semester__c.field-meta.xml
<CustomField>
    <fullName>Avg_Tuition_per_Semester__c</fullName>
    <description>BOPI-30 Calculated average from Account fields for in-state and out of state tuition. Used in A/R Collect, Payment Plan and Payments from original file</description>
    <formula>((Account.In_State_Avg_Tuition__c *  Account.In_State__c ) / 2) + (( Account.Out_of_State_Avg_Tuition__c * Account.Out_of_State__c ) /2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average tuition based on Account tuition fields, for ARR calculations</inlineHelpText>
    <label>Avg Tuition per Semester</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>