FLY wire David/force-app/main/default/objects/Opportunity/fields/Avg_Value_per_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>Avg_Value_per_Touchpoint__c</fullName>
    <description>Calculates the average value per Bizible touchpoint on the Opportunity. Formulat is  ARR / # of Bizible Touchpoints.</description>
    <formula>ARR__c/No_of_Bizible_Touches__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the average value per Bizible touchpoint on the Opportunity. Formulat is  ARR / # of Bizible Touchpoints.</inlineHelpText>
    <label>Avg Value per Touchpoint</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>