FLY wire David/force-app/main/default/objects/Opportunity/fields/Bid_No_Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid_No_Bid__c</fullName>
    <description>Filled in by Bid No Bid Questionnaire form Flow. Based on responses denotes whether Rep will be allowed to request proposals team to work the rfp. Triggers New Loopio Project button to become available or not.</description>
    <label>Bid/No Bid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>