FLY wire David/force-app/main/default/objects/Opportunity/fields/CAD_EFT_Outgoing_PYMTS__c.field-meta.xml
<CustomField>
    <fullName>CAD_EFT_Outgoing_PYMTS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of EFT outgoing payments for Payables auto calculation SAL-2265.
Modified Field label / text to be used for different currencies in flow calculation 02-23-2024 SAL-3624
Changed from Number of EFT outgoing payments to Domestic outgoing payments.</description>
    <inlineHelpText>Enter the Number of Domestic Outgoing Payments.</inlineHelpText>
    <label># DOM Outgoing PYMTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>