FLY wire David/force-app/main/default/objects/Opportunity/fields/CAD_FX_Rate__c.field-meta.xml
<CustomField>
    <fullName>CAD_FX_Rate__c</fullName>
    <description>Current FX Rate for CAD to USD used in CA Payables Auto Calculation SAL-2265 to be updated regularly</description>
    <formula>0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current FX Rate for CAD to USD</inlineHelpText>
    <label>OBS CAD FX Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>