FLY wire David/force-app/main/default/objects/Opportunity/fields/CAD_XB_PYMTS_Offshore__c.field-meta.xml
<CustomField>
    <fullName>CAD_XB_PYMTS_Offshore__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of cross border payments (Currency to Same Currency) offshore for Payables auto Calculation SAL-2265
Modified name and text to be used for different currencies in flow calculation 02-23-2024 SAL-3624
OBS since it&apos;s duplicated with &quot;Client Home CCY XB PYMNTS&apos;</description>
    <inlineHelpText>Number of Cross Border Payments (Currency to Same Currency) Offshore</inlineHelpText>
    <label>OBS XB DOM PYMTS Offshore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>