FLY wire David/force-app/main/default/objects/Opportunity/fields/CCYs_using_Flywire__c.field-meta.xml
<CustomField>
    <fullName>CCYs_using_Flywire__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3168</description>
    <inlineHelpText>Select all the currencies that Client will be transacting across Flywire</inlineHelpText>
    <label>CCYs using Flywire</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>