FLY wire David/force-app/main/default/objects/Opportunity/fields/Client_Home_CCY_XB_PYMNTS__c.field-meta.xml
<CustomField>
    <fullName>Client_Home_CCY_XB_PYMNTS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Client&apos;s Home Cross Border Payments processed Annually. SAL-2642
Also, replaced CAD XB PYMTS Offshore SAL-3624</description>
    <inlineHelpText>Number of Client&apos;s Home Cross Border Payments processed Annually.</inlineHelpText>
    <label>Client Home CCY XB PYMNTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>