FLY wire David/force-app/main/default/objects/Opportunity/fields/Close_Date_Pushes__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Pushes__c</fullName>
    <description>Tracks the number of times an opportunity’s close date has been updated. Filled out via Process Builder.</description>
    <inlineHelpText>Tracks the number of times an opportunity’s close date has been updated.</inlineHelpText>
    <label>Close Date Pushes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>