FLY wire David/force-app/main/default/objects/Opportunity/fields/Close_Date_Updated_From_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Updated_From_Lead_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be set to true when the lead conversion sets the close date.</description>
    <label>Close Date Updated From Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>