FLY wire David/force-app/main/default/objects/Opportunity/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <description>Which competitor is currently being used at this institution?</description>
    <inlineHelpText>If Lost to Competitor or incumbent, enter Competitor Name.</inlineHelpText>
    <label>Competitor Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>121 Payments</fullName>
            </value>
            <value>
                <fullName>ACI</fullName>
            </value>
            <value>
                <fullName>Braintree</fullName>
            </value>
            <value>
                <fullName>ChasePayment Tech</fullName>
            </value>
            <value>
                <fullName>CIBC Bank</fullName>
            </value>
            <value>
                <fullName>CohortPay</fullName>
            </value>
            <value>
                <fullName>Convera</fullName>
            </value>
            <value>
                <fullName>Cybersource</fullName>
            </value>
            <value>
                <fullName>EasyTransfer</fullName>
            </value>
            <value>
                <fullName>ECSI</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>FiServ</fullName>
            </value>
            <value>
                <fullName>GCEN</fullName>
            </value>
            <value>
                <fullName>GMO payment</fullName>
            </value>
            <value>
                <fullName>Helcim</fullName>
            </value>
            <value>
                <fullName>Mollie</fullName>
            </value>
            <value>
                <fullName>MTFX</fullName>
            </value>
            <value>
                <fullName>Nelnet</fullName>
            </value>
            <value>
                <fullName>Nexpay</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>NorthStar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paycomet</fullName>
            </value>
            <value>
                <fullName>PayEd</fullName>
            </value>
            <value>
                <fullName>Paygate</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>Rapyd</fullName>
            </value>
            <value>
                <fullName>Realex</fullName>
            </value>
            <value>
                <fullName>RedSys</fullName>
            </value>
            <value>
                <fullName>Revolut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>