FLY wire David/force-app/main/default/objects/Opportunity/fields/Contract_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Contract_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Agents, check this box if this opportunity does not require a Contract</description>
    <inlineHelpText>For Agents, check this box if this opportunity does not require a Contract</inlineHelpText>
    <label>Contract Not Required</label>
    <type>Checkbox</type>
</CustomField>