FLY wire David/force-app/main/default/objects/Opportunity/fields/Contract_Paper__c.field-meta.xml
<CustomField>
    <fullName>Contract_Paper__c</fullName>
    <description>BOPI-30 Choice of paper for HC ARR calculations</description>
    <inlineHelpText>Select contract paper for this opportunity</inlineHelpText>
    <label>Contract Paper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flywire</fullName>
                <default>true</default>
                <label>Flywire</label>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>FinThrive</fullName>
            </value>
            <value>
                <fullName>CommWX</fullName>
            </value>
            <value>
                <fullName>FinVi Ontario Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>