FLY wire David/force-app/main/default/objects/Opportunity/fields/Contract_Renewal_RFP__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_RFP__c</fullName>
    <description>Renamed per Carol SAL-3606</description>
    <inlineHelpText>Enter the Anticipated RFP Issue Date</inlineHelpText>
    <label>Anticipated RFP Issue Date</label>
    <type>Date</type>
</CustomField>