FLY wire David/force-app/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Created from JIRA ticket: BOPI-286.</description>
    <inlineHelpText>Effective date of the countersigned contract</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>