FLY wire David/force-app/main/default/objects/Opportunity/fields/Countries_Transacting_with_Flywire__c.field-meta.xml
<CustomField>
    <fullName>Countries_Transacting_with_Flywire__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3169</description>
    <inlineHelpText>Select all the countries the Client will be transacting in across Flwyire</inlineHelpText>
    <label>Countries Transacting with Flywire</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>