FLY wire David/force-app/main/default/objects/Opportunity/fields/CPQ_Contract__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>New CPQ Contract that contains all active subscriptions</inlineHelpText>
    <label>CPQ Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Legacy Opportunities</relationshipLabel>
    <relationshipName>LegacyOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>