FLY wire David/force-app/main/default/objects/Opportunity/fields/CPQ_Migrated_Record__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Migrated_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for CPQ data migration only</description>
    <inlineHelpText>Used for CPQ data migration only</inlineHelpText>
    <label>CPQ Migrated Record</label>
    <type>Checkbox</type>
</CustomField>