FLY wire David/force-app/main/default/objects/Opportunity/fields/CPQ_Opportunity_External_Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Opportunity_External_Migration_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used for CPQ data migration only</description>
    <externalId>true</externalId>
    <inlineHelpText>Used for CPQ data migration only</inlineHelpText>
    <label>CPQ Opportunity External Migration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>