FLY wire David/force-app/main/default/objects/Opportunity/fields/Created_Date_ONLY__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_ONLY__c</fullName>
    <description>Used for campaign attribution process builder.</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for campaign attribution process builder.</inlineHelpText>
    <label>Created Date ONLY</label>
    <type>Date</type>
</CustomField>