FLY wire David/force-app/main/default/objects/Opportunity/fields/Created_Week__c.field-meta.xml
<CustomField>
    <fullName>Created_Week__c</fullName>
    <description>Week of Year the Opp was created</description>
    <formula>TEXT((MOD(FLOOR( (DATEVALUE(CreatedDate) -7-DATEVALUE(&quot;2010-01-01&quot; ))/7),52))+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Week of Year the Opp was created</inlineHelpText>
    <label>Created Week</label>
    <type>Text</type>
</CustomField>