FLY wire David/force-app/main/default/objects/Opportunity/fields/Created_Year_Week__c.field-meta.xml
<CustomField>
    <fullName>Created_Year_Week__c</fullName>
    <description>Year from Created Date and the Week of the Year. Used Created Week field.</description>
    <formula>TEXT(YEAR( DATEVALUE(CreatedDate))) &amp;&quot; - &quot;&amp;
CASE(
Created_Week__c,
&quot;1&quot;, &quot;01&quot;,
&quot;2&quot;, &quot;02&quot;,
&quot;3&quot;, &quot;03&quot;,
&quot;4&quot;, &quot;04&quot;,
&quot;5&quot;, &quot;05&quot;,
&quot;6&quot;, &quot;06&quot;,
&quot;7&quot;, &quot;07&quot;,
&quot;8&quot;, &quot;08&quot;,
&quot;9&quot;, &quot;09&quot;,
Created_Week__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Year from Created Date and the Week of the Year.</inlineHelpText>
    <label>Created Year-Week</label>
    <type>Text</type>
</CustomField>