FLY wire David/force-app/main/default/objects/Opportunity/fields/Currency_Priority_2__c.field-meta.xml
<CustomField>
    <fullName>Currency_Priority_2__c</fullName>
    <description>Global Currency picklist for selecting Currency that is the highest priority for this client.</description>
    <inlineHelpText>Select the Currency that is the highest priority for this client.</inlineHelpText>
    <label>OBS Currency Priority 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>