FLY wire David/force-app/main/default/objects/Opportunity/fields/Date_0__c.field-meta.xml
<CustomField>
    <fullName>Date_0__c</fullName>
    <label>Date 0%</label>
    <type>Date</type>
</CustomField>