FLY wire David/force-app/main/default/objects/Opportunity/fields/Date_100__c.field-meta.xml
<CustomField>
    <fullName>Date_100__c</fullName>
    <label>Date 100%</label>
    <type>Date</type>
</CustomField>