FLY wire David/force-app/main/default/objects/Opportunity/fields/Date_10__c.field-meta.xml
<CustomField>
    <fullName>Date_10__c</fullName>
    <label>Date 10%</label>
    <type>Date</type>
</CustomField>