FLY wire David/force-app/main/default/objects/Opportunity/fields/Date_First_Opp_Product_Live__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Opp_Product_Live__c</fullName>
    <description>Date the first Prod Config record associated with this account goes live.</description>
    <inlineHelpText>Date the first Prod Config record associated with this account goes live. Auto set by the Prod Config Record</inlineHelpText>
    <label>Date First Opp Product Live</label>
    <type>Date</type>
</CustomField>