FLY wire David/force-app/main/default/objects/Opportunity/fields/Date_Probability_Hit_Mark__c.field-meta.xml
<CustomField>
    <fullName>Date_Probability_Hit_Mark__c</fullName>
    <description>Hidden field to hold date stamp when the Opportunity 1st hit it&apos;s mark. The Process Builder determines at what % and under which conditions the Date is set. See &apos;Opportunity Probability % Date Stamp&apos; in process builder.</description>
    <inlineHelpText>Hidden field to hold date stamp when the Opportunity 1st hit it&apos;s mark. The Process Builder determines at what % and under which conditions the Date is set. See &apos;Opportunity Probability % Date Stamp&apos; in process builder.</inlineHelpText>
    <label>OBS Date Probability Hit Mark</label>
    <type>Date</type>
</CustomField>