FLY wire David/force-app/main/default/objects/Opportunity/fields/Date_Stage_Live__c.field-meta.xml
<CustomField>
    <fullName>Date_Stage_Live__c</fullName>
    <description>Hidden field to map old &quot;Live&quot; stage</description>
    <label>Date Stage Live</label>
    <type>Date</type>
</CustomField>