FLY wire David/force-app/main/default/objects/Opportunity/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <description># of the days the opportunity was open. Includes the day the Opportunity was opened.</description>
    <formula>IF(ISBLANK(  Date_100__c  ),
NOW() - CreatedDate,
Date_100__c - DATEVALUE(CreatedDate)
)+1</formula>
    <inlineHelpText># of the days the opportunity was open. Includes the day the Opportunity was opened.</inlineHelpText>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>