FLY wire David/force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Stage_Change__c</fullName>
    <description>Number of days since the Opportunity Stage was last changed.</description>
    <formula>IF(ISBLANK( Date_100__c ),
TODAY()-Last_Stage_Change__c,
Date_100__c - Last_Stage_Change__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the Opportunity Stage was last changed.</inlineHelpText>
    <label>Days Since Last Stage Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>